# Library_Management_System_FastApi

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_main.http
.github/workflow/: ci.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 15956caf893b_initial_schema.py  6f4d22e1c9a7_create_library_tables.py
backend/app/: __init__.py  exceptions.py  main.py  schemas.py
backend/app/auth/: jwt_auth.py  password.py
backend/app/cli/: main.py
backend/app/core/: celery_app.py  paths.py
backend/app/model/: book.py  enums.py  loan.py  user.py
backend/app/repository/: book_repository.py  database.py  library_repository.py  loan_repository.py  user_repository.py
backend/app/routes/: book_routes.py  library_routes.py  loan_routes.py  user_routes.py
backend/app/service/: __init__.py  book_service.py  library_service.py  loan_service.py  user_service.py
backend/app/tasks/: __init__.py  receipt_tasks.py
db/: .$LIbraryMangementSystem.drawio.bkp  LIbraryMangementSystem.drawio
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: Badge.jsx  BookCard.jsx  Layout.jsx  ProtectedRoute.jsx  Status.jsx
frontend/src/pages/: BookDetailsPage.jsx  BooksPage.jsx  DashboardPage.jsx  LandingPage.jsx  LoansPage.jsx  (+4 more)
schema/: LIbraryMangementSystem.drawio
tests/: test_background_jobs.py  test_basic.py  test_domain_exceptions.py  test_module_structure.py  test_receipt_jobs.py
(+3 files in other folders)
