[project]
name = "library-management-system-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
library = "app.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
