[project]
name = "library-management-system-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.2",
    "pwdlib>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
library = "app.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
